brain/sources/prod-metadata/objects/Candidate_Training__c/Candidate_Training__c.object-meta.xml
<CustomObject>
    <label>Candidate Training</label>
    <nameField>
        <label>Candidate Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>