brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Assigned_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Trainer</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Candidate Trainings</relationshipLabel>
    <relationshipName>Candidate_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>