brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Assigned_Trainer_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Trainer_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Trainer User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidate_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>