brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidate Trainings</relationshipLabel>
    <relationshipName>Candidate_Trainings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>