brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <label>Candidate Email</label>
    <type>Email</type>
</CustomField>