brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Candidate_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Feedback__c</fullName>
    <label>Candidate Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>