brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Candidate_Owner__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidate_Trainings1</relationshipName>
    <type>Lookup</type>
</CustomField>