brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Candidate_Time_Zone_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Time_Zone_Start_Time__c</fullName>
    <label>Candidate Time Zone Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Times</valueSetName>
    </valueSet>
</CustomField>