brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Candidate Trainings</relationshipLabel>
    <relationshipName>Candidate_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>