brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Niche__c.field-meta.xml
<CustomField>
    <fullName>Niche__c</fullName>
    <label>Niche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI ML Engineer</fullName>
            </value>
            <value>
                <fullName>Python Developer/Engineer</fullName>
            </value>
            <value>
                <fullName>Java Fullstack Developer/Engineer</fullName>
            </value>
            <value>
                <fullName>Product/Project Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Finance Analyst</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>