brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Candidate Trainings</relationshipLabel>
    <relationshipName>Candidate_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>