brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Program_Version__c.field-meta.xml
<CustomField>
    <fullName>Program_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Version</label>
    <referenceTo>Program_Version__c</referenceTo>
    <relationshipLabel>Candidate Trainings</relationshipLabel>
    <relationshipName>Candidate_Trainings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>