brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Session_Window__c.field-meta.xml
<CustomField>
    <fullName>Session_Window__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Session Window this training is booked into. Populated by bookSessionWindow (portal) and assignTrainingToWindow (admin QA).</description>
    <label>Session Window</label>
    <referenceTo>Session_Window__c</referenceTo>
    <relationshipLabel>Candidate Trainings</relationshipLabel>
    <relationshipName>Candidate_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>