brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Start_Tme_IST__c.field-meta.xml
<CustomField>
    <fullName>Start_Tme_IST__c</fullName>
    <label>Start Tme IST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>