brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Trainer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Feedback__c</fullName>
    <label>Trainer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>