brain/sources/prod-metadata/objects/Candidate_Training__c/fields/Whatsapp_No__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_No__c</fullName>
    <label>Whatsapp No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>